fix(footer): align-left

--- a/asset/css/desktop/footer.css
+++ b/asset/css/desktop/footer.css
@@ -5,6 +5,7 @@
 
   .footer {
     padding-top: 15px;
+    padding-left: 0;
     justify-content: flex-start;
   }
 }
